# camel

./: .gitignore  README.md  pyproject.toml  命令.txt
cameltrack/: __init__.py  camel.py  cameltrack.py
cameltrack/architecture/: __init__.py  base_module.py  det_tokenizers.py  gaffe.py  identity.py  temporal_encoder.py  temporal_heuristics.py
cameltrack/configs/: cameltrack.yaml  cameltrack_train.yaml
cameltrack/configs/dataset/: dancetrack.yaml  example_video.yaml
cameltrack/configs/modules/track/: camel.yaml
cameltrack/train/: __init__.py  dataset.py  sampler.py
cameltrack/train/callbacks/: __init__.py  metrics.py  visualization.py
cameltrack/train/transforms/: __init__.py  batch.py  dataset.py  tracklet.py  transform.py
cameltrack/utils/: assignment_strats.py  config_finder.py  coordinates.py  distances.py  kalman_filter.py  merge_token_strats.py  similarity_metrics.py
